contenido de la pagina servicios + mejora en nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -35,7 +35,7 @@
 
     <main class="px-2 m-2">
         <section class="text-xl text-center p-2 md:px-33">
-            <h2 class="font-bold m-5">Quienes somos?</h2>
+            <h2 class="font-bold m-5 text-3xl">Quienes somos?</h2>
             <article>
                 <p>ContaBlix, tu estudio contable digital.</p>
                 <br>
@@ -54,20 +54,23 @@
                 <br>
                 <p>En ContaBlix creemos que la contabilidad no solo es cumplir con obligaciones, sino también una herramienta estratégica para crecer.</p>
             </article>
-            <article class="p-2 m-2 flex flex-wrap gap-10 justify-center content-center">
-                <div class="bg-cyan-900 rounded-xl p-2 w-[300px] hover:bg-cyan-800">
+            <article class="p-2 m-2 flex flex-wrap gap-10 justify-center content-center text-slate-900">
+                <div class="bg-slate-100 rounded-xl p-2 w-[300px] place-items-center">
+                    <img src="img/mision.png" alt="mision">
                     <h3 class="font-semibold text-2xl m-2">Misión</h3>
                     <p>Brindar soluciones contables y financieras ágiles, claras y accesibles, ayudando a monotributistas, autónomos y PyMEs a tomar mejores decisiones</p>
                 </div>
-                <div class="bg-cyan-900 rounded-xl p-2 w-[300px] hover:bg-cyan-800">
+                <div class="bg-slate-100 rounded-xl p-2 w-[300px] place-items-center">
+                    <img src="img/vision.png" alt="vision">
                     <h3 class="font-semibold text-2xl m-2">Visión</h3>
                     <p>Convertirnos en el aliado estratégico de quienes buscan transformar la gestión de su negocio con tecnología y asesoría profesional de confianza.</p>
                 </div>
-                <div class="bg-cyan-900 rounded-xl p-2 w-[300px] hover:bg-cyan-800">
+                <div class="bg-slate-100 rounded-xl p-2 w-[300px] place-items-center">
+                    <img src="img/valor.png" alt="valor">
                     <h3 class="font-semibold text-2xl m-2">Valores</h3>
                     <p>Transparencia, innovación y compromiso. Creemos en el trabajo cercano y en generar resultados que impulsen el crecimiento de nuestros clientes.</p>
                 </div>
-                <h2 class="text-xl font-semibold text-black p-2">Un equipo joven de contadores y desarrolladores que combina experiencia profesional con herramientas digitales para simplificar tu vida financiera.</h2>
+                <h2 class="text-xl font-semibold text-slate-900 p-2">Un equipo joven de contadores y desarrolladores que combina experiencia profesional con herramientas digitales para simplificar tu vida financiera.</h2>
             </article>
             <a class="inline-block m-1 p-2 text-base font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg text-white"
                 href="servicios.html">Conoce nuestros servicios
