--- a/servicios.html
+++ b/servicios.html
@@ -36,38 +36,46 @@
 
     <main class="px-2 m-2">
         <section class="text-xl text-center space-y-5">
-            <h2 class="font-bold m-5">Nuestros Servicios</h2>
+            <h2 class="font-bold m-5 text-3xl">Nuestros Servicios</h2>
             <p>
-                En ContaBlix ofrecemos un enfoque moderno y digital para la gestión contable, fiscal y financiera. 
+                En ContaBlix ofrecemos un enfoque moderno y digital para la gestión contable, fiscal y financiera.
                 <br>
-                Nuestro objetivo es simplificar tus obligaciones y potenciar tu negocio con soluciones claras, accesibles y personalizadas. 
+                Nuestro objetivo es simplificar tus obligaciones y potenciar tu negocio con soluciones claras,
+                accesibles y personalizadas.
                 <br>
-                Ya seas monotributista, autónomo o PyME, ponemos a tu disposición un equipo de profesionales que te acompaña en cada paso, ayudándote a crecer con seguridad y eficiencia.
+                Ya seas monotributista, autónomo o PyME, ponemos a tu disposición un equipo de profesionales que te
+                acompaña en cada paso, ayudándote a crecer con seguridad y eficiencia.
             </p>
-            <article class="p-2 flex flex-wrap gap-5 justify-center content-center">
-                <div class="bg-gray-900 rounded-xl p-2 w-[300px] hover:bg-gray-800">
+            <article class="p-2 m-2 flex flex-wrap gap-10 justify-center content-center text-slate-900">
+                <div class="bg-slate-100 rounded-xl p-2 w-[300px] place-items-center">
+                    <img src="img/impuestos.png" alt="impuestos">
                     <h3 class="font-semibold text-2xl m-2">Fiscal impositivo</h3>
                     <p>
-                        
+                        Planificación y cumplimiento tributario para optimizar tu carga impositiva, siempre al día con
+                        ARCA, organismos fiscales provinciales y municipales
                     </p>
                 </div>
-                <div class="bg-gray-900 rounded-xl p-2 w-[300px] hover:bg-gray-800">
+                <div class="bg-slate-100 rounded-xl p-2 w-[300px] place-items-center">
+                    <img src="img/trabajo.png" alt="trabajo">
                     <h3 class="font-semibold text-2xl m-2">Laboral</h3>
                     <p>
-
+                        Gestión integral de empleados, liquidaciones segun CCT, cargas sociales, aportes y
+                        contribuciones patronales y asesoría para que cumplas con la normativa vigente
                     </p>
                 </div>
-                <div class="bg-gray-900 rounded-xl p-2 w-[300px] hover:bg-gray-800">
-                    <h3 class="font-semibold text-2xl m-2">Contable</h3>
+                <div class="bg-slate-100 rounded-xl p-2 w-[300px] place-items-center">
+                    <img src="img/contabilidad.png" alt="contabilidad">
+                    <h3 class="font-semibold text-2xl m-2">Contabilidad</h3>
                     <p>
-
+                        Registro y análisis contable profesional para generar balances y reportes claros, precisos y
+                        detallados que respalden tus decisiones estratégicas
                     </p>
                 </div>
-                <h2 class="text-xl font-semibold text-black p-2">Un equipo joven de contadores y desarrolladores que combina experiencia profesional con herramientas digitales para simplificar tu vida financiera.</h2>
             </article>
+            <a class="p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg inline-block m-2" href="contacto.html">Solicitar Presupuesto
+            </a>
         </section>
     </main>
-
 
     <footer class="text-gray-900 flex flex-wrap justify-evenly border-t-2 border-t-gray-400 mt-11 p-1">
         <section class="m-2">
