--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
                 </figure>
                 <figure class="flex m-3 items-center"><img src="img/telefono-movil.png" alt="telefono" width="32px"
                         height="32px">
-                    <p class="mx-1">+54 9 (383) 4786245</p>
+                    <p class="mx-1">+54 9 (383) 4XXXXXX</p>
                 </figure>
                 <figure class="flex m-3 items-center"><img src="img/ubicacion.png" alt="telefono" width="32px"
                         height="32px">
-                    <p class="mx-1">Av. Belgrano 533 - Depto. 2B</p>
+                    <p class="mx-1">Av. Belgrano XXX</p>
                 </figure>
                 <figure class="flex m-3 items-center"><img src="img/reloj.png" alt="telefono" width="32px"
                         height="32px">
-                    <p class="mx-1">Lunes a viernes de 8 a 19h</p>
+                    <p class="mx-1">Lunes a viernes de 8 a 19hs</p>
                 </figure>
             </article>
         </section>
