--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ContaBlix: Tu estudio contable digital</title>
-    <meta name="description" content="Servicios contables y fiscales para monotributistas y PyMEs." />
+    <meta name="description" content="Servicios contables y fiscales para monotributistas, emprendedores y PyMEs"/>
+    <meta name="keywords" content="estudio contable, impuestos, monotributo, autonomos, liquidacion, sueldos">
+    <meta name="author" content="Mario Ivan Carreño">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
