mejora de tamaño texto fuente en titulo h2

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="m-1 w-22 h-22" href="index.html">
             <img src="img/logo.png" alt="Logo">
         </a>
-        <h2 class="font-semibold">BIENVENIDO a tu estudio contable digital</h2>
+        <h2 class="font-semibold text-xl">BIENVENIDO a tu estudio contable digital</h2>
 
         <nav class="m-2 text-xl font-semibold">
             <ul class="flex flex-wrap justify-center gap-x-5">
