--- a/nosotros.html
+++ b/nosotros.html
@@ -21,7 +21,7 @@
         <a class="m-1 w-22 h-22" href="index.html">
             <img src="img/logo.png" alt="Logo">
         </a>
-        <h2 class="font-semibold">BIENVENIDO a tu estudio contable digital</h2>
+        <h2 class="font-semibold text-xl">BIENVENIDO a tu estudio contable digital</h2>
 
         <nav class="m-2 text-xl font-semibold">
             <ul class="flex flex-wrap justify-center gap-x-5">
@@ -81,7 +81,7 @@
     <footer class="text-gray-900 flex flex-wrap justify-evenly border-t-2 border-t-gray-400 mt-11 p-1">
         <section class="m-2">
             <a class="text-white inline-block p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg"
-                href="#">Contactanos
+                href="contacto.html">Contactanos
             </a>
             <article class="">
                 <figure class="flex m-3 items-center"><img src="img/correo-electronico.png" alt="email" width="32px"
