mejora del formulario y mapa responsive

--- a/contacto.html
+++ b/contacto.html
@@ -49,14 +49,29 @@
                     <input class="border-2 border-gray-100 w-33" type="text" name="dni" id=""
                         placeholder="INGRESE SU DNI">
                 </label>
+                <label class="m-2" for="email">EMAIL
+                    <input class="border-2 border-gray-100 w-55" type="email" name="email" id=""
+                        placeholder="INGRESE SU E-MAIL">
+                </label>
+                <label class="m-2" for="email">ESTA INSCRIPTO EN ARCA?
+                    <br>
+                    <input type="radio" name="inscripto" id=""> SI
+                    <input type="radio" name="inscripto" id=""> NO
+                </label>
+                <label class="m-2" for="email">ACTUALMENTE DESARROLLA ALGUNA ACTIVIDAD ECONOMICA?
+                    <br>
+                    <input type="radio" name="actividad" id=""> SI
+                    <input type="radio" name="actividad" id=""> NO
+                </label>
                 <label class="m-2" for="observaciones">OBSERVACIONES
                     <br>
                     <textarea class="border-2 border-gray-100 w-88 h-44" type="text" name="observaciones" id="">
                     </textarea>
                 </label>
+                <button class="p-2 mb-4 bg-green-500 w-22 rounded-xl self-center" type="submit">ENVIAR</button>
             </form>
             <article>
-                <iframe
+                <iframe class="lg:w-[500px] lg:h-[500px]"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7015.236531583921!2d-65.78445102202755!3d-28.460921589025716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942428bc7b55286d%3A0xbfa3fe8868173fd4!2sAv.%20Belgrano%20533%2C%20K4700CUF%20San%20Fernando%20del%20Valle%20de%20Catamarca%2C%20Catamarca!5e0!3m2!1ses-419!2sar!4v1756569864321!5m2!1ses-419!2sar"
                     width="400px" height="400px" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
