--- a/contacto.html
+++ b/contacto.html
@@ -39,19 +39,19 @@
             <form class="text-left flex flex-col md:px-11 lg:px-33" action="" method="post">
                 <label class="m-2" for="nombre">NOMBRE
                     <input class="border-2 border-gray-100 w-64" type="text" name="nombre" id=""
-                        placeholder="INGRESE SU NOMBRE">
+                        placeholder="INGRESE SU NOMBRE" required>
                 </label>
                 <label class="m-2" for="apellido">APELLIDO
                     <input class="border-2 border-gray-100 w-62" type="text" name="apellido" id=""
-                        placeholder="INGRESE SU APELLIDO">
+                        placeholder="INGRESE SU APELLIDO" required>
                 </label>
                 <label class="m-2" for="dni">DNI
                     <input class="border-2 border-gray-100 w-33" type="text" name="dni" id=""
-                        placeholder="INGRESE SU DNI">
+                        placeholder="INGRESE SU DNI" required>
                 </label>
                 <label class="m-2" for="email">EMAIL
                     <input class="border-2 border-gray-100 w-55" type="email" name="email" id=""
-                        placeholder="INGRESE SU E-MAIL">
+                        placeholder="INGRESE SU E-MAIL" required>
                 </label>
                 <label class="m-2" for="email">ESTA INSCRIPTO EN ARCA?
                     <br>
