mejora en botton submit (hover)

--- a/contacto.html
+++ b/contacto.html
@@ -68,7 +68,7 @@
                     <textarea class="border-2 border-gray-100 w-88 h-44" type="text" name="observaciones" id="">
                     </textarea>
                 </label>
-                <button class="p-2 mb-4 bg-green-500 w-22 rounded-xl self-center" type="submit">ENVIAR</button>
+                <button class="p-2 mb-4 bg-green-600 w-22 rounded-xl self-center hover:bg-green-500" type="submit">ENVIAR</button>
             </form>
             <article>
                 <iframe class="lg:w-[500px] lg:h-[500px]"
