mejora de inputs del formulario (margenes laterales del eje x)

--- a/contacto.html
+++ b/contacto.html
@@ -37,20 +37,20 @@
         <h1 class="text-2xl font-semibold m-2">CONTACTO</h1>
         <section class="flex flex-wrap items-center justify-evenly">
             <form class="text-left flex flex-col md:px-11 lg:px-33" action="" method="post">
-                <label class="m-2" for="nombre">NOMBRE
-                    <input class="border-2 border-gray-100 w-64" type="text" name="nombre" id=""
+                <label class="m-2 mx-4" for="nombre">NOMBRE
+                    <input class="border-2 border-gray-100 w-64 mx-2" type="text" name="nombre" id=""
                         placeholder="INGRESE SU NOMBRE" required>
                 </label>
                 <label class="m-2" for="apellido">APELLIDO
-                    <input class="border-2 border-gray-100 w-62" type="text" name="apellido" id=""
+                    <input class="border-2 border-gray-100 w-62 mx-2" type="text" name="apellido" id=""
                         placeholder="INGRESE SU APELLIDO" required>
                 </label>
                 <label class="m-2" for="dni">DNI
-                    <input class="border-2 border-gray-100 w-33" type="text" name="dni" id=""
+                    <input class="border-2 border-gray-100 w-33 mx-2" type="text" name="dni" id=""
                         placeholder="INGRESE SU DNI" required>
                 </label>
                 <label class="m-2" for="email">EMAIL
-                    <input class="border-2 border-gray-100 w-55" type="email" name="email" id=""
+                    <input class="border-2 border-gray-100 w-55 mx-2" type="email" name="email" id=""
                         placeholder="INGRESE SU E-MAIL" required>
                 </label>
                 <label class="m-2" for="email">ESTA INSCRIPTO EN ARCA?
