documentacion con comentarios

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ContaBlix: Tu estudio contable digital</title>
+    <!--METADATOS-->
     <meta name="description" content="Servicios contables y fiscales para monotributistas, emprendedores y PyMEs"/>
     <meta name="keywords" content="estudio contable, impuestos, monotributo, autonomos, liquidacion, sueldos">
     <meta name="author" content="Mario Ivan Carreño">
@@ -40,6 +41,7 @@
     </header>
 
     <main class="px-1">
+        <!--PORTADA HERO-->
         <section
             class="relative h-[50vh] md:h-[70vh] bg-[url(img/portada.jpg)] bg-cover bg-center flex items-center justify-center">
             <div class="absolute inset-0 bg-black/50"></div>
@@ -48,6 +50,7 @@
                 <h2 class="text-2xl font-semibold">Asesoría fiscal, contable y financiera para monotributistas,
                     autonomos y PyMEs
                 </h2>
+                <!--BOTON ACCION DIRECTA-->
                 <a class="p-3 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg" href="contacto.html">Solicitar Presupuesto
                 </a>
             </article>
