--- a/nosotros.html
+++ b/nosotros.html
@@ -54,6 +54,7 @@
                 <br>
                 <p>En ContaBlix creemos que la contabilidad no solo es cumplir con obligaciones, sino también una herramienta estratégica para crecer.</p>
             </article>
+            <!--CARDS-->
             <article class="p-2 m-2 flex flex-wrap gap-10 justify-center content-center text-slate-900">
                 <div class="bg-slate-100 rounded-xl p-2 w-[300px] place-items-center">
                     <img src="img/mision.png" alt="mision">
@@ -72,6 +73,7 @@
                 </div>
                 <h2 class="text-xl font-semibold text-slate-900 p-2">Un equipo joven de contadores y desarrolladores que combina experiencia profesional con herramientas digitales para simplificar tu vida financiera.</h2>
             </article>
+            <!--BOTON LINK-->
             <a class="inline-block m-1 p-2 text-base font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg text-white"
                 href="servicios.html">Conoce nuestros servicios
             </a>
