--- a/contacto.html
+++ b/contacto.html
@@ -36,6 +36,7 @@
     <main class="px-2 m-2">
         <h1 class="text-2xl font-semibold m-2">CONTACTO</h1>
         <section class="flex flex-wrap items-center justify-evenly">
+            <!--FORMULARIO-->
             <form class="text-left flex flex-col md:px-11 lg:px-33" action="" method="post">
                 <label class="m-2 mx-4" for="nombre">NOMBRE
                     <input class="border-2 border-gray-100 w-64 mx-2" type="text" name="nombre" id=""
@@ -68,6 +69,7 @@
                     <textarea class="border-2 border-gray-100 w-88 h-44" type="text" name="observaciones" id="">
                     </textarea>
                 </label>
+                <!--BOTON SUBMIT-->
                 <button class="p-2 mb-4 bg-green-600 w-22 rounded-xl self-center hover:bg-green-500" type="submit">ENVIAR</button>
             </form>
             <article>
