--- a/servicios.html
+++ b/servicios.html
@@ -46,6 +46,7 @@
                 Ya seas monotributista, autónomo o PyME, ponemos a tu disposición un equipo de profesionales que te
                 acompaña en cada paso, ayudándote a crecer con seguridad y eficiencia.
             </p>
+            <!--CARDS-->
             <article class="p-2 m-2 flex flex-wrap gap-10 justify-center content-center text-slate-900">
                 <div class="bg-slate-100 rounded-xl p-2 w-[300px] place-items-center">
                     <img src="img/impuestos.png" alt="impuestos">
@@ -72,6 +73,7 @@
                     </p>
                 </div>
             </article>
+            <!--BOTON LINK-->
             <a class="p-2 font-semibold bg-blue-600 hover:bg-blue-500 rounded-lg inline-block m-2" href="contacto.html">Solicitar Presupuesto
             </a>
         </section>
